<resources>
    <string name="app_name">Conversion Calculator</string>
    <string name="convert_hint">000.000</string>
    <string name="action_settings">Settings</string>
    <string name="convert">Convert</string>
    <string name="reset">Reset</string>
    <string name="more">More!</string>
    <string name="share">Share!</string>
    <string name="equals"> = </string>
    <string name="distance">Distance</string>
    <string name="distance_head">Distance Conversions:</string>
    <string name="volume">Volume</string>
    <string name="volume_head">Volume Conversions:</string>
    <string name="weight">Weight</string>
    <string name="weight_head">Weight Conversions:</string>
    <string name="temp">Temp</string>
    <string name="temp_head">Temperature Conversions:</string>
    <string name="convert_from">Convert From:</string>
    <string name="convert_to">Convert To:</string>
    <string name="no_bar_selected">Choose a conversion type.\nFrom the bar above.</string>
    <string name="select_head">Select A Conversion:</string>
    <string name="request">Request More Conversions</string>
    <string name="all_conversions">Convert to all Units</string>
    <string name="single_conversions">Convert to single Unit</string>
    <string name="table_head">Converted table:</string>

    <string-array name="distance_array">
        <item>Kilometers</item>
        <item>Meters</item>
        <item>Centimeters</item>
        <item>Millimeters</item>
        <item>Inches</item>
        <item>Feet</item>
        <item>Yards</item>
        <item>Miles</item>
    </string-array>

    <string-array name="volume_array">
        <item>Kiloliters</item>
        <item>Liters</item>
        <item>Milliliters</item>
        <item>Gallons</item>
        <item>Fluid Ounces</item>
        <item>Cups</item>
        <item>Pints</item>
    </string-array>

    <string-array name="weight_array">
        <item>Kilograms</item>
        <item>Grams</item>
        <item>Milligrams</item>
        <item>Pounds</item>
        <item>Ounces</item>
    </string-array>

    <string-array name="temp_array">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
</resources>
