<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/banner"
        android:background="#aa007223"
        android:padding="@dimen/activity_vertical_margin"
        android:textColor="#ffffff"
        android:text="@string/app_name"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav_container"
        android:background="#ff007223"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:paddingBottom="2dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#575757">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/distance_button"
                android:layout_weight="1"
                android:padding="@dimen/activity_half_margin"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:gravity="center"
                android:background="#ffffff"
                android:textColor="#ff007223"
                android:text="@string/distance"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/volume_button"
                android:layout_weight="1"
                android:padding="@dimen/activity_half_margin"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:gravity="center"
                android:background="#ffffff"
                android:textColor="#ff007223"
                android:text="@string/volume"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/weight_button"
                android:layout_weight="1"
                android:padding="@dimen/activity_half_margin"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center"
                android:background="#ffffff"
                android:textColor="#ff007223"
                android:text="@string/weight"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/content"
        android:background="#99575757"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"/>

</LinearLayout>
