<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/content"
    android:background="#99575757">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conversion_head"
        android:layout_alignParentTop="true"
        android:padding="@dimen/activity_half_margin"
        android:background="#575757"
        android:gravity="center"
        android:textColor="#ffffff"
        android:text="@string/distance"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_container"
        android:layout_below="@+id/conversion_head">

        <TextView
            android:id="@+id/convert_from_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/activity_half_margin"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/convert_from"/>

        <TextView
            android:id="@+id/convert_to_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/activity_half_margin"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/convert_to"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinners_container"
        android:layout_below="@+id/info_container">

        <Spinner
            android:id="@+id/convert_from_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/activity_half_margin"
            android:theme="@style/Theme.ColoredSpinners"
            android:entries="@array/distance_array"
            android:prompt="@string/convert_from"/>

        <Spinner
            android:id="@+id/convert_to_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/activity_half_margin"
            android:theme="@style/Theme.ColoredSpinners"
            android:entries="@array/distance_array"
            android:prompt="@string/convert_to"/>

    </LinearLayout>

</RelativeLayout>